2004-12-14	blytkerchan
	* rw_lock.c: make comments easier to read on a 80*25 screen
	* thread_list.c: ditto

2004-10-28	blytkerchan
	* barrier.c: canonicalize arch includes
	* critical_section.c: ditto
	* rw_lock.c: ditto
	* rw_spinlock.c: ditto
	* semaphore.c: ditto
	* thread_list.c: ditto
	* thread_queue.c: ditto

2004-10-19	blytkerchan
	* rw_spinlock.c (rw_spinlock_downgrade): new function
	* rw_spinlock.h: ditto

2004-09-13	blytkerchan
	* semaphore.c (lt_sem_init): use atomic_set_int in stead of atomic_set
	(lt_sem_deq): use atomic_set_ptr in stead of atomic_set

2004-09-01	blytkerchan
	* rw_lock.c: include arch/include/swap.h
	remove static declarations of functions we don't define
	* rw_lock.h: include thread_queue.h
	* thread.h (lt_thread_wake): new function
	(lt_thread_suspend): new function
	* thread_list.c: include libmemory/smr.h
	include libmemory/hptr.h
	include arch/include/compare_and_exchange.h
	[lt_thread_list_state_t]: rename field cmarl to cmark
	(lt_thread_list_remove): fix compile errors
	(lt_thread_list_insert): return int
	fix compile errors
	(lt_thread_list_find): ditto (latter)
	* thread_list.h: include thread.h
	(lt_thread_list_move): fix declaration
	(lt_thread_list_insert): ditto
	(lt_thread_list_find): ditto
	* thread_queue.c: include stdlib.h
	include libmemory/smr.h
	include libmemory/hptr.h
	include arch/include/compare_and_exchange.h
	(lt_thread_queue_new): remove n_node declaration
	fix compile errors
	* thread_queue.h (lt_thread_queue_free): rename from lt_thread_free
  
	* Makefile: remove

2004-08-23	blytkerchan
	* thread_list.c (_lt_thread_list_find): rename from
	lt_thread_list_find
	(lt_thread_list_remove): use lt_thread_list_state_t in stead of
	list_state_t
	call _lt_thread_list_find in stead of list_find
	(lt_thread_list_for_each): implement
	(lt_thread_list_insert): ditto
	(lt_thread_list_find): ditto

2004-08-22	blytkerchan
	* thread.c (lt_thread_new): set mark field to 0
	* thread.h [lt_thread_t]: new field: mark