@@ -1,3 +1,9 @@
+2004-12-23	blytkerchan	add POSIX-compliant rwlock implementation
+	* how_rwlocks_work.txt: new file
+	* rwlock.c: ditto
+	* rwlock.h: ditto
+	* module.mk: reflect above
+
 2004-12-14	blytkerchan
 	* rw_lock.c: make comments easier to read on a 80*25 screen
 	* thread_list.c: ditto
